--- a/vuetify/vuefy-project2/package.json
+++ b/vuetify/vuefy-project2/package.json
@@ -12,6 +12,7 @@
     "core-js": "^3.8.3",
     "roboto-fontface": "*",
     "vue": "^2.6.14",
+    "vue-router": "^3.5.4",
     "vuetify": "^2.6.0"
   },
   "devDependencies": {
