--- a/vuetify/vuefy-project2/package.json
+++ b/vuetify/vuefy-project2/package.json
@@ -7,6 +7,7 @@
     "build": "vue-cli-service build",
     "lint": "vue-cli-service lint"
   },
+
   "dependencies": {
     "@mdi/font": "5.9.55",
     "core-js": "^3.8.3",
@@ -24,9 +25,11 @@
     "@vue/eslint-config-airbnb": "^6.0.0",
     "eslint": "^7.32.0",
     "eslint-config-airbnb-typescript": "^17.0.0",
+    "eslint-config-vuetify": "^0.2.0",
     "eslint-plugin-import": "^2.25.3",
-    "eslint-plugin-vue": "^8.0.3",
+    "eslint-plugin-vue": "^8.7.1",
     "eslint-plugin-vuejs-accessibility": "^1.1.0",
+    "eslint-plugin-vuetify": "^1.1.0",
     "vue-cli-plugin-vuetify": "~2.5.1",
     "vue-template-compiler": "^2.6.14"
   },
