--- a/package.json
+++ b/package.json
@@ -3,5 +3,8 @@
     "firebase": "^9.8.4",
     "vue": "^3.2.37",
     "vue-router": "^4.0.16"
+  },
+  "devDependencies": {
+    "vue-cli-plugin-vuetify": "~2.5.1"
   }
 }
